// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-modal #render should render large modal 1`] = `
<gux-modal size="large">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-large">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;

exports[`gux-modal #render should render medium modal 1`] = `
<gux-modal size="medium">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-medium">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;

exports[`gux-modal #render should render modal with a specified initial focus element 1`] = `
<gux-modal initial-focus="#cancelButton">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-dynamic">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;

exports[`gux-modal #render should render modal with just left align buttons (to be deprecated) 1`] = `
<gux-modal size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons">
            </slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons">
            </slot>
          </div>
        </div>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal with just right align buttons (to be deprecated) 1`] = `
<gux-modal size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons">
            </slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons">
            </slot>
          </div>
        </div>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal with separate button slots (to be deprecated) 1`] = `
<gux-modal size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <div class="gux-button-footer">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons">
            </slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons">
            </slot>
          </div>
        </div>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <div slot="start-align-buttons">
    <gux-button-slot>
      <button>
        Cancel
      </button>
    </gux-button-slot>
  </div>
  <div slot="end-align-buttons">
    <gux-button-slot accent="primary">
      <button>
        Accept
      </button>
    </gux-button-slot>
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render modal without a title 1`] = `
<gux-modal size="large">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog>
      <div class="gux-modal-container gux-large">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;

exports[`gux-modal #render should render modal without buttons 1`] = `
<gux-modal size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <div class="gux-button-footer gux-no-buttons">
          <div class="gux-start-align-buttons">
            <slot name="start-align-buttons">
            </slot>
          </div>
          <div class="gux-end-align-buttons">
            <slot name="end-align-buttons">
            </slot>
          </div>
        </div>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
</gux-modal>
`;

exports[`gux-modal #render should render small modal 1`] = `
<gux-modal size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-small">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;

exports[`gux-modal #render should render small modal by default 1`] = `
<gux-modal>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <dialog aria-labelledby="gux-i">
      <div class="gux-modal-container gux-dynamic">
        <gux-dismiss-button>
          <template shadowrootmode="open" shadowrootdelegatesfocus>
            <gux-button-slot accent="ghost">
              <button type="button" title="Dismiss">
                <div class="gux-icon-container">
                  <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
                  </gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </template>
        </gux-dismiss-button>
        <h1 class="gux-modal-header" id="gux-i">
          <slot name="title">
          </slot>
        </h1>
        <div class="gux-modal-content">
          <p>
            <slot name="content">
            </slot>
          </p>
        </div>
        <footer>
          <slot name="footer">
          </slot>
        </footer>
      </div>
    </dialog>
  </template>
  <div slot="title">
    Modal Title
  </div>
  <div slot="content">
    This contains the modal content.
  </div>
  <gux-cta-group slot="footer" align="end">
    <gux-button slot="primary">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Primary
    </gux-button>
    <gux-button slot="dismiss">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button id="button-i" type="button" class="gux-secondary">
          <slot>
          </slot>
        </button>
      </template>Cancel
    </gux-button>
  </gux-cta-group>
</gux-modal>
`;
